--- a/app/assets/stylesheets/activeadmin-sortable.css.scss
+++ b/app/assets/stylesheets/activeadmin-sortable.css.scss
@@ -1,7 +1,26 @@
-.handle{
-  span{
-    font-size: 16px;
-    vertical-align: middle;
-    cursor: move;
+body.active_admin {
+
+  .handle{
+    position: relative;
+    width: 14px;
+
+    span{
+      font-size: 16px;
+      vertical-align: middle;
+      cursor: move;
+
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      text-align: center;
+      line-height: 36px;
+    }
   }
+
+  .odd.ui-sortable-helper{
+    background: #fff;
+  }
+
 }
