allow change success row color from styles

--- a/app/assets/stylesheets/activeadmin-sortable.css.scss
+++ b/app/assets/stylesheets/activeadmin-sortable.css.scss
@@ -23,4 +23,7 @@ body.active_admin {
     background: #fff;
   }
 
+  table.index_table .ui-sortable tr.success td{
+    background-color: #acd15b;
+  }
 }
