--- a/app/assets/stylesheets/activeadmin-sortable.css.scss
+++ b/app/assets/stylesheets/activeadmin-sortable.css.scss
@@ -26,4 +26,22 @@ body.active_admin {
   table.index_table .ui-sortable tr.success td{
     background-color: #acd15b;
   }
+
+  .handle span {
+    font-size: 26px;
+    vertical-align: middle;
+    cursor: move;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    line-height: 28px;
+    font-family: serif;
+    margin-top: -15px;
+    margin-left: -15px;
+    background: image_url('admin/sort-icon.png') no-repeat center center;
+    text-indent: -9999px;
+  }
 }
